--- a/TestWeChat/TestWeChat/Web.config
+++ b/TestWeChat/TestWeChat/Web.config
@@ -15,5 +15,6 @@
   </system.webServer>
   <appSettings>
     <add key="token" value="FNDCXY"/>
+    <add key="createMenuUrl" value="https://api.weixin.qq.com/cgi-bin/menu/create?access_token=FNDCXY"/>
   </appSettings>
 </configuration>
