--- a/TestWeChat/TestWeChat/TestWeChat.csproj
+++ b/TestWeChat/TestWeChat/TestWeChat.csproj
@@ -52,6 +52,8 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ngrok\ngrok.bat" />
+    <Content Include="ngrok\ngrok.cfg" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -60,6 +62,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ngrok\ngrok.exe" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
